--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">HeartBaymax</string>
     <string name="action_settings">Settings</string>
+    <string name="new_patient">Ingresar nuevo paciente</string>
+    <string name="title_activity_new_patient">NewPatientActivity</string>
 </resources>
