--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,10 +2,11 @@
     <string name="app_name">HeartBaymax</string>
     <string name="action_settings">Settings</string>
     <string name="new_patient">Ingresar nuevo paciente</string>
-    <string name="title_activity_new_patient">NewPatientActivity</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="title_activity_new_patient">Nuevo paciente</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next_step">Siguiente</string>
     <string name="finish_step">Finalizar</string>
+    <string name="patient_title_home">"Paciente: {id}"</string>
+    <string name="edit_preliminary_diagnosis">Editar diagnostico preliminar</string>
+    <string name="edit_complementary_tests">Editar exámenes complementarios</string>
 </resources>
