Added Translated values

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="edit_preliminary_diagnosis">Editar diagnostico preliminar</string>
     <string name="edit_complementary_tests">Editar exámenes complementarios</string>
     <string name="patients">Pacientes:</string>
+    <string name="continue_diagnosis">Continuar diagnostico</string>
 </resources>
