Updated button in patient page

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -11,4 +11,5 @@
     <string name="edit_complementary_tests">Editar exámenes complementarios</string>
     <string name="patients">Pacientes:</string>
     <string name="continue_diagnosis">Continuar diagnostico</string>
+    <string name="update_heart_situation">Actualizar situación cardíaca</string>
 </resources>
