Added more stages in PatientPage

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,14 @@
     <string name="heart_situation">Situación cardíaca</string>
     <string name="initial_situation">Situación inicial</string>
     <string name="enter_initial_situation">Ingresar situación inicial</string>
+    <string name="enter_prelinary_diagnosis">Ingresar diagnóstico preliminar</string>
+    <string name="prelinary_diagnosis">Diagnóstico preliminar</string>
+    <string name="enter_ecg">Ingresar electrocardiograma</string>
+    <string name="ecg">Electrocardiograma</string>
+    <string name="enter_rx">Ingresar datos de radriografía de tórax</string>
+    <string name="rx">Radiografía de tórax</string>
+    <string name="enter_lab_analysis">Ingresar análisis de laboratorio</string>
+    <string name="lab_analysis">Análisis de laboratorio</string>
+    <string name="enter_final_diagnosis">Ingresar diagnóstico final</string>
+    <string name="final_diagnosis">Diagnóstico final</string>
 </resources>
