--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">HeartBaymax</string>
+    <string name="app_name">Heart Baymax</string>
     <string name="action_settings">Settings</string>
     <string name="new_patient">Ingresar nuevo paciente</string>
     <string name="title_activity_new_patient">Nuevo paciente</string>
@@ -30,4 +30,6 @@
     <string name="accept">Aceptar</string>
     <string name="immediate_treatment">Tratamiento inmediato</string>
     <string name="no_treatment">No requiere tratamiento inmediato</string>
+    <string name="networ_error">Error de red</string>
+    <string name="patient">Paciente</string>
 </resources>
