--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,7 +7,7 @@
     <string name="next_step">Siguiente</string>
     <string name="finish_step">Finalizar</string>
     <string name="patient_title_home">"Nombre: {patient}"</string>
-    <string name="patient_age_home">"Edad: {age}"</string>
+    <string name="patient_age_home">"Edad: {age} años"</string>
     <string name="edit_preliminary_diagnosis">Editar diagnóstico preliminar</string>
     <string name="edit_complementary_tests">Editar exámenes complementarios</string>
     <string name="patients">Pacientes:</string>
